--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Parsons, Thomas William, 1819-1892'
+- GITenberg
 title: 'Seaward: An Elegy on the Death of Thomas William Parsons'
 url: http://www.gutenberg.org/ebooks/43403
